guestbook-loadbalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-loadbalancer
  namespace: cisco-club
  labels:
    app: guestbook
    tier: frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: guestbook
    tier: frontend
