guestbook-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: guestbook
    tier: frontend
  name: frontend-nodeport
  namespace: cisco-club
spec:
  ports:
  - nodePort: 32265
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: guestbook
    tier: frontend
  type: NodePort
